# StreamlitCrewAi

./: CONFIGURACION.md  FIX_STREAMLIT_ERROR.md  INSTALACION_UV.md  MEJORAS_IMPLEMENTADAS.md  MULTI_FORMAT_SUPPORT.md  README.md  main.py  pyproject.toml  requirements.txt  run.bat  run.py  setup_database.sql  test_fixes.py  test_multi_format_stories.py  test_simple_syntax.py  test_streamlit_image.py  test_system.py
.streamlit/: config.toml
Models/: gemini.py
Tools/: PublishInstagramStoryTool.py  SaveStoryTool.py  SpeechTranscriptionTool.py  blip_caption_tool.py
crew/: __init__.py  agents.py  story_crew.py  tasks.py
stories/: historia_20251205_120326.json  historia_20251205_121045.md  historia_20251205_122440.html  historia_20251205_134822.md  historia_20251205_141136.md  historia_20251205_174537.json  historia_20251208_150050.html  historia_20251208_150647.html
utils/: config.py  file_manager.py  publicar.py  supabase_client.py
